--- a/app.css
+++ b/app.css
@@ -4,9 +4,12 @@ body{
 }
 
 h1{
-  color: black;
+  color: blue;
   text-align: center;
+text-shadow: -4px 0 2px black, 0 4px 2px black, 4px 0 2px black, 0 -2px 2px black ;
+font-weight: bolder;
 }
+
 h2{
   color: red;
 }
@@ -33,8 +36,10 @@ h4{
   color: black;
 }
 h3{
-  color: black;
-  text-align: center;
+  color: blue;
+text-align: center;
+text-shadow: -4px 0 2px black, 0 4px 2px black, 4px 0 2px black, 0 -2px 2px black ;
+font-weight: bolder;
 }
 body{
 
