--- a/app.css
+++ b/app.css
@@ -195,7 +195,7 @@ div.Fly {
 @-webkit-keyframes myfirst {
     0%   {background-color:red; left:0px; top:0px;}
     25%  {background-color:yellow; left:200px; top:0px;}
-    50%  {background-color:blue; left:200px; top:200px;}
+    50%  {background-color:blue; left:2200px; top:200px;}
     75%  {background-color:green; left:0px; top:200px;}
     100% {background-color:red; left:0px; top:0px;}
 }
@@ -210,6 +210,8 @@ div.Fly {
 }
 
 img.Fly{
+  zoom: 42%;
+
   width: 90px;
   height: 60px;
   border-radius:  408px;
