--- a/app.css
+++ b/app.css
@@ -1,5 +1,7 @@
 body{
   background-color: black;
+  text-align: center;
+  justify-content: center;
 
 }
 
@@ -178,7 +180,7 @@ ul.tab li a:focus, .active {
   width: 200px;
   height: 200px;
   position: relative;
-  background:
+
 }
 #myAnimation {
   width: 30px;
@@ -209,7 +211,7 @@ div.Fly {
 /* Standard syntax */
 @keyframes myfirst {
     0%   {background-color:red; left:0px; top:0px;}
-    25%  {background-color:yellow; left:840px; top:200px;}
+    25%  {background-color:yellow; left:880px; top:200px;}
     50%  {background-color:blue; left:200px; top:380px;}
     75%  {background-color:orange; left:0px; top:200px;}
     100% {background-color:red; left:0px; top:-200px;}
@@ -240,4 +242,43 @@ img.sat{
   text-align: right;
   position: relative;
   margin-left: 830px;
+}
+#myContainer {
+
+  position: relative;
+  text-align: right;
+margin-left: 89%;
+
+}
+#myAnimation {
+  background-color: black;
+  position: absolute;
+
+  border-radius: 10px;
+
+
+
+}
+button.sat{
+  color: red;
+  background-color: #4CAF50;
+  color: white;
+  display: block;
+  margin: auto;
+  text-align: center;
+  position:absolute;
+  background-color: black;
+  border: 19px;
+  font-size: 28px;
+  color: #FFFFFF;
+  padding: 20px;
+  width: 100px;
+  text-decoration:none;
+  overflow: hidden;
+  cursor: crosshair;
+  margin-bottom: 33px;
+  box-sizing:content-box;
+  border-color: silver;
+  border-style: groove;
+  float: right;
 }
