--- a/app.css
+++ b/app.css
@@ -65,14 +65,16 @@ background-attachment: fixed;
 
 
 .dropbtn {
-    background-color: black;
-    color: white;
+    background-color: transparent;
     padding: 16px;
     font-size: 36px;
     border: 12px solid silver;
     cursor: pointer;
     width: 363px;
-    cursor:pointer;
+    color: blue;
+  text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+  font-family:monospace;
+  font-weight: bolder;
 }
 
 .dropdown {
@@ -83,9 +85,12 @@ background-attachment: fixed;
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: black;
+    background-color: transparent;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     color: blue;
+  text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+  font-family:monospace;
+  font-weight: bolder;
 
 }
 
@@ -96,7 +101,7 @@ background-attachment: fixed;
     display: block;
     text-align: center;
     font-size: 28px;
-    width: 325px;
+    width: 320px;
     border: 3px solid silver;
 }
 
@@ -124,8 +129,7 @@ ul.tab {
     list-style-type: none;
     margin: auto auto;
     overflow: hidden;
-    border: 10px solid blue;
-    background-color: black;
+    background-color: transparent;
     text-align: center;
     display: block;
     position: relative;
@@ -150,6 +154,9 @@ ul.tab li a {
     border: 10px double silver;
     font-weight: bolder;
     margin: auto;
+    color: blue;
+  text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+  font-family:monospace;
 }
 
 /* Change background color of links on hover */
