--- a/app.css
+++ b/app.css
@@ -60,10 +60,14 @@ background-attachment: fixed;
 background-color: black;
 margin: 0 auto;
 text-align: center;
-
 }
 html{
   width: auto;
+}
+.animated.fadeIn{
+  -webkit-animation-duration: 2s;
+  -webkit-animation-delay: 1s;
+
 }
 h3.animated.fadeIn{
  -webkit-animation-duration: 3s;
@@ -93,9 +97,11 @@ button.animated.fadeIn{
 .animated.zoomInDown{
  -webkit-animation-duration: 3.5s;
  -webkit-animation-delay: 3s;
-
 }
-
+.animated.fadeInUp{
+ -webkit-animation-duration: 3s;
+ -webkit-animation-delay: 2s;
+}
 
 .dropbtn {
     background-color: silver;
@@ -174,7 +180,6 @@ text-align: center;
 
 .dropdown:hover .dropbtn {
     background-color: transparent;
-
 }
 img.war{
 width: 107px;
@@ -184,10 +189,8 @@ height: 90px;
 .skills{
    text-align: center;
   display: inline-block;
-
   position: relative;
   margin: auto;
-
 }
 ul.tab {
     list-style-type: none;
@@ -197,7 +200,6 @@ ul.tab {
     text-align: center;
     display: inline-block;
     position: relative;
-
 }
 
 /* Float the list items side by side */
@@ -274,7 +276,6 @@ div.Fly {
     position: relative;
     -webkit-animation: myfirst 5s linear 8s infinite alternate; /* Safari 4.0 - 8.0 */
     animation: myfirst 5s cubic-bezier(1, -0.17, 0, 1.44) 6s infinite alternate;
-
 }
 
 /* Safari 4.0 - 8.0 */
@@ -329,20 +330,16 @@ img.html{
   height: 220px;
 }
 #myContainer {
-
   position: relative;
   text-align: center;
  margin: 0 auto;
  padding-left: 90px;
 
-
 }
 #myAnimation {
   background-color: transparent;
   position: absolute;
-
   border-radius: 10px;
-
 }
 
 #myton{
