--- a/app.css
+++ b/app.css
@@ -20,6 +20,18 @@ a{
   color: blue;
 
 }
+.work{
+height:110px;
+width: 97px;
+background-color: transparent;
+
+}
+.work1{
+height:210px;
+width: 207px;
+background-color: transparent;
+
+}
 
 h5.Fit{
   color: green;
