--- a/app.css
+++ b/app.css
@@ -5,6 +5,7 @@ text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px s
 font-weight: bolder;
 font-size: 55px;
 font-family:monospace;
+margin-bottom: -10px;
 }
 
 h2{
