--- a/app.css
+++ b/app.css
@@ -74,7 +74,7 @@ position: relative;
 display: inline-block;
 }
 body{
-background-image: url('/Users/Erik/erikslewis.github.io/images/www.GIFCreator.me_rwAJhX.gif');
+background-image: url('images/www.GIFCreator.me_rwAJhX.gif');
 background-position: center;
 background-size: cover;
 background-attachment: fixed;
