--- a/app.css
+++ b/app.css
@@ -168,7 +168,7 @@ text-align: center;
     display: inline-block;
 }
 
-.dropdown-content {
+.dropdown-content5 {
     display: none;
     position: absolute;
     background-color: transparent;
@@ -180,7 +180,7 @@ text-align: center;
 
 }
 
-.dropdown-content a {
+.dropdown-content5 a {
     color: blue;
     padding: 12px 16px;
     text-decoration: none;
@@ -190,9 +190,9 @@ text-align: center;
     width: 320px;
 }
 
-.dropdown-content a:hover {background-color: silver;}
+.dropdown-content5 a:hover {background-color: silver;}
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content5 {
     display: block;
     text-align: center;
     margin: auto;
@@ -510,7 +510,7 @@ img.logo{
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: black;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -539,7 +539,7 @@ img.logo{
     position: absolute;
     top: -22px;
     right: 25px;
-    font-size: 66px;
+    font-size: 96px;
     margin-left: 50px;
 
 }
