--- a/materialize/css/materialize.css
+++ b/materialize/css/materialize.css
@@ -7184,6 +7184,8 @@ input[type=range]:focus::-ms-fill-upper {
   height: 48px;
   line-height: 48px;
   padding: 0 32px;
+  border-color: #333;
+  border-style: solid;
 }
 
 .side-nav li > a:hover {
