--- a/materialize/css/materialize.css
+++ b/materialize/css/materialize.css
@@ -5717,6 +5717,10 @@ button.btn-floating {
   height: inherit;
   padding: 0 16px;
 margin-left: -122px;
+border-top: 3px;
+border-color: #333;
+border-style: solid;
+
 }
 
 .side-nav .collapsible-header:hover,
@@ -7184,6 +7188,7 @@ input[type=range]:focus::-ms-fill-upper {
   height: 48px;
   line-height: 48px;
   padding: 0 32px;
+  border-top: 3px;
   border-color: #333;
   border-style: solid;
 }
@@ -7243,7 +7248,7 @@ input[type=range]:focus::-ms-fill-upper {
 .side-nav .userView {
   position: relative;
   padding: 32px 32px 0;
-  margin-bottom: 8px;
+  margin-bottom: 0px;
     background-color: black;
 }
 
