--- a/app.css
+++ b/app.css
@@ -490,3 +490,8 @@ img.logo{
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+img.hire{
+  width: 160%;
+  height: 60%;
+  margin-left: -30%;
+}
