--- a/app.css
+++ b/app.css
@@ -67,11 +67,12 @@ display: inline-block;
 body{
 background-image: url('images/www.GIFCreator.me_rwAJhX.gif');
 background-position: center;
-background-size:cover;
+background-size:auto 100%;
 background-attachment:fixed;
 background-color: black;
 margin: 0 auto;
 text-align: center;
+background-repeat: no-repeat;
 }
 html{
   width: auto;
