--- a/app.css
+++ b/app.css
@@ -66,7 +66,7 @@ display: inline-block;
 }
 body{
 background-image: url('images/www.GIFCreator.me_rwAJhX.gif');
-background-size:cover;
+background-size:contain;
 background-attachment:fixed;
 background-color: black;
 margin: 0 auto;
