--- a/app.css
+++ b/app.css
@@ -1,20 +1,21 @@
 h1{
-color: blue;
+color: #003b00;
+font-size: 60px;
 text-align: center;
-text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+text-shadow: -4px 0 2px #00ff41, 0 4px 2px #00ff41, 4px 0 2px #00ff41, 0 -2px 2px #00ff41 ;
 font-weight: bolder;
 font-family:monospace;
 }
 h2{
-color: blue;
+color: #003b00;
 font-size: 20px;
 text-align: center;
-text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+text-shadow: -4px 0 2px #00ff41, 0 4px 2px #00ff41, 4px 0 2px #00ff41, 0 -2px 2px #00ff41 ;
 font-weight: bolder;
 font-family:monospace;
 }
 a{
-  color: blue;
+  color: #008f11;
 }
 div.javascripthtml5css3.tabcontent{
   display: block;
@@ -55,9 +56,10 @@ h4{
   color: black;
 }
 h3{
-color: blue;
+color: #003b00;
+font-size: 38px;
 text-align: center;
-text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+text-shadow: -4px 0 2px #00ff41, 0 4px 2px #00ff41, 4px 0 2px #00ff41, 0 -2px 2px #00ff41 ;
 font-weight: bolder;
 font-family:monospace;
 position: relative;
@@ -82,12 +84,12 @@ html{
 h3.animated.fadeIn{
  -webkit-animation-duration: 3s;
  -webkit-animation-delay: 2s;
- font-size: 25px;
+ font-size: 29px;
 }
 h1.animated.zoomInDown{
  -webkit-animation-duration: 2s;
  -webkit-animation-delay: 0s;
- font-size: 25px;
+ font-size: 26px;
 }
 .animated.zoomIn{
  -webkit-animation-duration: 3s;
@@ -110,24 +112,25 @@ button.animated.fadeIn{
  -webkit-animation-delay: 2s;
 }
 .dropbtn {
-background-color: silver;
-font-size: 30px;
+background-color: #00ff41;
+font-size: 46px;
 border-color: transparent;
 width: 300px;
-color: blue;
-text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
+height: 200px;
+color: black;
+text-shadow: -4px 2px 2px #008f11, 2px 4px 2px #008f11, 4px 2px 2px #008f11, 2px -2px 2px #008f11 ;
 font-family:monospace;
 font-weight: bolder;
 position: relative;
 text-align: center;
-font-weight: 700;
+font-weight: 300;
 display: inline-block;
 padding: 4px;
 -webkit-border-radius: 18px;
 -moz-border-radius: 18px;
 border-radius: 18px;
--webkit-box-shadow: 9px 9px 9px blue, 9px 9px 25px blue;
-  -moz-box-shadow: 9px 9px 9px blue, 9px 9px 25px blue;
+-webkit-box-shadow: 9px 9px 9px #008f11, 9px 9px 25px #003b00;
+  -moz-box-shadow: 9px 9px 9px #008f11, 9px 9px 25px #003b00;
 	-webkit-transition: all .1s ease;
 	-moz-transition: all .1s ease;
 	-ms-transition: all .1s ease;
@@ -135,9 +138,9 @@ border-radius: 18px;
 	transition: all .1s ease;
 }
 .dropbtn:active {
-    -webkit-box-shadow: 0px 3px 0px blue, 0px 3px 6px blue;
-    -moz-box-shadow: 0px 3px 0px blue, 0px 3px 6px blue;
-    box-shadow: 0px 3px 0px blue, 0px 3px 6px blue;
+    -webkit-box-shadow: 0px 3px 0px #008f11, 0px 3px 6px #008f11;
+    -moz-box-shadow: 0px 3px 0px #008f11, 0px 3px 6px #008f11;
+    box-shadow: 0px 3px 0px #008f11, 0px 3px 6px #008f11;
     position: relative;
     top: 6px;
 }
@@ -149,13 +152,13 @@ border-radius: 18px;
     display: none;
     position: absolute;
     background-color: transparent;
-    color: blue;
+    color: #003b00;
   text-shadow: -4px 0 2px silver, 0 4px 2px silver, 4px 0 2px silver, 0 -2px 2px silver ;
   font-family:monospace;
   font-weight: bolder;
 }
 .dropdown-content5 a {
-    color: blue;
+    color:  #003b00;
     padding: 12px 16px;
     text-decoration: none;
     display: inline-block;
@@ -250,8 +253,8 @@ div.Fly {
 }
 img.Fly{
   zoom: 42%;
-  width: 270px;
-  height: 240px;
+  width: 280px;
+  height: 300px;
   border-radius:  408px;
 }
 footer{
