--- a/app.css
+++ b/app.css
@@ -47,6 +47,8 @@ h5.man {
 img.img2 {
   height: 110px;
   width: 110px;
+  display: block;
+margin: 0 auto;
 }
 
 img.imgB {
@@ -263,8 +265,10 @@ ul.tab {
 
 #myContainer {
   width: 200px;
-  height: 400px;
+  height: 200px;
   position: fixed;
+  display: block;
+margin: 0 auto;
 }
 
 #myAnimation {
