--- a/app.css
+++ b/app.css
@@ -387,7 +387,7 @@ img.html {
   position: relative;
   text-align: center;
   margin: auto;
-  padding-left: 46px;
+  padding-right: 60px;
 }
 
 #myAnimation {
