--- a/app.css
+++ b/app.css
@@ -618,7 +618,7 @@ img.hire {
     position: absolute;
     top: 0;
     right: 25px;
-    font-size: 36px;
+    font-size: 56px;
     margin-left: 50px;
-    color: red;
+    color: black;
 }
